syntax = "proto3";

option go_package = "protos/password-generator";

service PasswordGenerator {
	rpc GeneratePassword(PasswordRequest) returns (PasswordResponse);
}

message PasswordRequest {

}

message PasswordResponse {
	string password = 1;
}
